--- a/vue-Pinia/package.json
+++ b/vue-Pinia/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "router",
+  "name": "vue-pinia",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.2.2",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
